--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-21 12:03:18 -0400 
+%% Created for Nils Peters at 2009-04-21 14:12:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -380,13 +380,13 @@ system is examined, and its performance over wider reproduction areas is also co
 	Year = {1974},
 	Bdsk-Url-1 = {http://www.ai.sri.com/ajh/audio/sfm/scans/wireless-world-gerzon-12-1974.pdf}}
 
-@techreport{ITU:1993_surround_5:1,
+@booklet{ITU:1993_surround_5:1,
 	Author = {ITU},
 	Date-Added = {2009-02-08 21:43:10 +0100},
-	Date-Modified = {2009-02-08 21:43:10 +0100},
+	Date-Modified = {2009-04-21 14:11:37 -0400},
 	Institution = {International Telecommunications Union},
 	Keywords = {spatialisation},
-	Title = {Recommendation BS. 775: Multi-channel stereophonic sound system with or without accompanying picture},
+	Title = {{Recommendation BS. 775: Multi-channel stereophonic sound system with or without accompanying picture, International Telecommunications Union}},
 	Year = {1993}}
 
 @inproceedings{Lyon:2008spatial_orchestration,
@@ -572,11 +572,10 @@ motion in three-dimensional space.
 @article{Pulkki:1997vbap,
 	Author = {Pulkki, V.},
 	Date-Added = {2009-02-08 20:51:58 +0100},
-	Date-Modified = {2009-04-21 12:00:49 -0400},
+	Date-Modified = {2009-04-21 12:20:04 -0400},
 	Journal = {J. Audio Eng. Soc.},
 	Keywords = {spatialisation, vbap},
 	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_1997vbap.pdf},
-	Month = {June},
 	Pages = {456-466},
 	Title = {Virtual sound source positioning using vector base amplitude panning},
 	Volume = {45(6)},
