--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-21 14:12:07 -0400 
+%% Created for Nils Peters at 2009-04-21 14:17:08 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -229,9 +229,9 @@
 @conference{dbapICMC09,
 	Address = {Montreal, Canada},
 	Author = {Trond Lossius and Pascal Baltazar and Th\´eo de la Hogue },
-	Booktitle = {Proceedings of International Computer Music Conference, ICMC09},
+	Booktitle = {Proceedings of 2009 International Computer Music Conference},
 	Date-Added = {2009-03-28 11:20:10 -0400},
-	Date-Modified = {2009-04-21 11:55:53 -0400},
+	Date-Modified = {2009-04-21 14:14:11 -0400},
 	Title = {{DBAP - Distance-Based Amplitude Panning}},
 	Year = {2009}}
 
@@ -596,11 +596,11 @@ motion in three-dimensional space.
 	Bdsk-Url-1 = {http://lib.tkk.fi/Diss/2001/isbn9512255324/}}
 
 @inproceedings{Pulkki:2000vbap_max,
-	Address = {Berlin, Germany - TODO, check Address, I think it was in Cuba },
+	Address = {Berlin, Germany},
 	Author = {Pulkki, V.},
-	Booktitle = {Proceedings of International Computer Music Conference 2000. },
+	Booktitle = {Proceedings of 2000 International Computer Music Conference },
 	Date-Added = {2009-02-08 20:49:31 +0100},
-	Date-Modified = {2009-03-28 11:28:07 -0400},
+	Date-Modified = {2009-04-21 14:17:02 -0400},
 	Keywords = {spatialisation, vbap, Max},
 	Local-Url = {file://localhost/Users/lossius/Documents/Artikler/_bibdesk_indexed/Pulkki_2000vbap_max.pdf},
 	Pages = {304--307},
